# model-cookiecutter-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  README.md  requirements.txt  start
{{cookiecutter.project_slug}}/.github/workflows/: lint.yml
{{cookiecutter.project_slug}}/dev/: README.md  mlflow_example.ipynb
{{cookiecutter.project_slug}}/docs/: data_engineering.ipynb  model_behavior.ipynb  model_build.ipynb
{{cookiecutter.project_slug}}/package/: MANIFEST.in  justfile  pyproject.toml
{{cookiecutter.project_slug}}/package/src/{{cookiecutter.project_slug}}/: __init__.py  utils.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
